# wefa

./: .gitignore  .gitlab-ci.yml  AGENTS.md  PLANS.md  README.md  agent.md  code_review.md  renovate.json
.claude/: launch.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml
backend-for-frontend/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  bff.py  docker-compose.yml  openapi.yaml
bff/: .env.example  .gitignore  .pysentry.toml  AGENTS.md  Dockerfile  README.md  bff.py  docker-compose.yml  pyproject.toml
bff/backend_for_frontend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bff/bff_app/: __init__.py  settings.py
bff/bff_app/openapi/: __init__.py  generate.py  openapi.yaml
bff/bff_app/routes/: auth.py  health.py  proxy.py
bff/bff_app/services/: __init__.py  auth.py  token_cookies.py
bff/tests/: conftest.py  test_auth_callback.py  test_auth_login.py  test_auth_logout.py  test_auth_session.py  test_auth_userinfo.py  test_openapi_generation.py  test_proxy_request.py  test_settings.py  test_token_cookies.py
django/: .pysentry.toml  AGENTS.md  CONTRIBUTE.md  README.md  conf.py  db.sqlite3  mypy.ini  pyproject.toml  pytest.ini
scripts/: AGENTS.md  test_wefa_version.py  wefa_version.py
vue/: .gitignore  .prettierrc.json  AGENTS.md  BRANDING.md  CHANGELOG.md  CONTRIBUTE.md  README.md  cspell.config.yaml  docker-compose-dev.yml  docker-config.yml  eslint.config.ts  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  (+4 more)
(+537 files in other folders)
