[project]
name = "backend-for-frontend"
version = "0.6.0"
description = "Flask backend-for-frontend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "authlib>=1.7.2",
    "cryptography",
    "flask~=3.1.2",
    "flask-cors",
    "flask-session",
    "flask-smorest>=0.46.2",
    "pyyaml~=6.0",
    "python-dotenv~=1.2.1",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pygments>=2.20.0",
]
